React to aspnet/Razor#705
- Updated `ScriptTagHelper` and `LinkTagHelper` to maintain their quotes on generated script tags.
- Removed `TagHelperOutputExtensions`. It's no longer needed.
- We no longer string replace quotes directly. We rely on encoding and the initial representation of an attribute to ensure quotes don't break generated attributes.
- Updated tests.

--- a/test/Microsoft.AspNetCore.Mvc.FunctionalTests/compiler/resources/HtmlGenerationWebSite.HtmlGeneration_Home.Index.html
+++ b/test/Microsoft.AspNetCore.Mvc.FunctionalTests/compiler/resources/HtmlGenerationWebSite.HtmlGeneration_Home.Index.html
@@ -4,7 +4,7 @@
         <a title="&lt;the title>" href="/HtmlGeneration_Product">Product Index</a>
     </div>
     <div>
-        <a title="&quot;the&quot; title" href="/HtmlGeneration_Product/List">Product List</a>
+        <a title='"the" title' href="/HtmlGeneration_Product/List">Product List</a>
     </div>
     <div>
         <a id="HtmlGenerationWebSite_Index">HtmlGenerationWebSite Index</a>
