--- a/test/Microsoft.AspNetCore.Mvc.FunctionalTests/compiler/resources/RazorWebSite.UrlResolution.Index.Encoded.html
+++ b/test/Microsoft.AspNetCore.Mvc.FunctionalTests/compiler/resources/RazorWebSite.UrlResolution.Index.Encoded.html
@@ -16,7 +16,7 @@
     <iframe src=HtmlEncode[[~/SomeUrl]] />
     <img src="HtmlEncode[[/]]HtmlEncode[[John Doe]]" srcset="HtmlEncode[[/]]HtmlEncode[[John Doe]]">
     <script src="HtmlEncode[[/]]Person/HtmlEncode[[John Doe]]/JS"></script>
-    <input src="HtmlEncode[[/]]/Person" itemscope itemid="HtmlEncode[[/]]Person" formaction="HtmlEncode[[~/SomeUrl]]">
+    <input src="HtmlEncode[[/]]/Person" itemscope itemid="HtmlEncode[[/]]Person" formaction=HtmlEncode[[~/SomeUrl]]>
     <button formaction="HtmlEncode[[/]]\Person" />
     <form action="HtmlEncode[[/]]~Person" />
     <blockquote cite="HtmlEncode[[/]]Person" />
